src/components/PostCard/PostCard.module.css
.post-card-wrapper {
  background: #ffffff;
  /* Grey/Lighter */

  border: 1px solid #ebedf0;
  border-radius: var(--spacing-8);
  max-width: 670px;
  overflow: hidden;
}

.post-card-wrapper > header {
  padding: var(--spacing-12);

  display: flex;
  align-items: center;
  gap: var(--spacing-8);
}

.post-card-wrapper header .author-profile,
.post-card-wrapper header .default-profile-icon {
  width: 40px;
  height: 40px;
  border-radius: var(--spacing-8);
}

.post-card-wrapper header .author-name {
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: #000000;
}

.post-card-wrapper header .post-other-info {
  font-size: 12px;
  line-height: 1var (--spacing-8);
  color: #6d747a;
}

.more-actions-icon {
  margin-left: auto;
  cursor: pointer;
}

.post-card-wrapper .body .content {
  padding: var(--spacing-8) var(--spacing-12);
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.02em;
  color: #08090a;
}
.post-card-wrapper .body .content img {
  max-width: 100%;
}

/* Footer */

.footer-actions-wrapper {
  padding: var(--spacing-12);
  display: flex;
  align-items: center;
  gap: var(--spacing-16);
}

.footer-actions-wrapper svg {
  cursor: pointer;
}

.upvote-downvote {
  padding: var(--spacing-8) var(--spacing-16);
  background: #f7f5f9;
  border-radius: 50px;
  display: flex;
  align-items: center;
  gap: 12px;
  width: max-content;
}

.upvote-downvote .divider {
  display: block;
  background: #ebedf0;
  border-radius: 1px;
  width: 1px;
  height: var(--spacing-24);
}

.upvote-downvote .upvote {
  display: flex;
  align-items: center;
  cursor: pointer;
  gap: var(--spacing-8);
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: #6d747a;
}

.footer-actions-wrapper .share-icon {
  margin-left: auto;
}

.inputContainer {
  display: flex;
  padding: 6px 12px;
  align-items: center;
}

.inputAuthorImage {
  border-radius: var(--spacing-8);
  width: var(--spacing-32);
  height: var(--spacing-32);
}
.comment-input-wrapper {
  position: relative;
  width: 100%;
  display: flex;
}
.comment-input-wrapper form {
  display: flex;
  width: 100%;
}
.comment-input-wrapper .submit-btn {
  position: absolute;
  top: 50%;
  right: 8px;
  transform: translateY(-50%);
  border: none;
  width: 30px;
  height: 30px;
  border-radius: 100%;
  cursor: pointer;
}
.comment-input-wrapper .submit-btn:hover {
  background-color: rgba(var(--primary-100-rgb), 0.2);
}
.comment-input-wrapper .submit-btn:disabled{
  opacity: 0.4;
  pointer-events: none;
}
.input {
  all: unset;
  background: #f8f9fa;
  border: 1px solid #ebedf0;
  border-radius: var(--spacing-8);
  margin-left: var(--spacing-8);
  padding-left: var(--spacing-8);
  height: var(--spacing-40);
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  color: #000000;
  width: 100%;
}

.input::placeholder {
  color: #939ca3;
  font-size: 12px;
}
.all-comment-container {
  padding: var(--spacing-12);
  display: flex;
  flex-direction: column;
  gap: var(--spacing-12);
  margin-top: var(--spacing-16);
}
.all-comment-container .comment {
  display: flex;
  gap: var(--spacing-8);
}
.all-comment-container .comment .content-wrapper {
  padding: var(--spacing-8);
  width: 100%;
  background-color: #f8f9fa;
  border-radius: 0px 12px 12px 12px;
}
.all-comment-container .comment .content-wrapper > header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.all-comment-container .comment .content-wrapper .author-name {
  font-weight: 500;
  font-size: 14px;
  line-height: 18px;
  color: #000000;
}

.all-comment-container .comment .content-wrapper .date {
  font-weight: 500;
  font-size: 10px;
  line-height: 14px;
  color: #6d747a;
}
.all-comment-container .comment .content-wrapper .content {
  margin-top: var(--spacing-12);
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  color: #08090a;
}

.all-comment-container .comment .content-wrapper > footer {
  margin-top: var(--spacing-12);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.see-more-comments {
  font-weight: 600;
  font-size: 14px;
  line-height: 22px;
  text-align: center;
  color: #8064a2;
  cursor: pointer;
  margin-top: var(--spacing-12);
}

.postMetadata {
  width: 100%;
  display: flex;
  align-items: center;
}
.metaImgContainer {
  display: flex;
  align-self: stretch;
  width: 195px;
}
.metaImgContainer img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.metaContent {
  flex: 1;
  padding: 16px;
  padding-left: 1rem;
  align-self: stretch;
  /* background-color: #f0f0f0; */
}
.contentHead {
  color: #000;
  font-size: 14px;
  font-family: Poppins;
  font-style: normal;
  font-weight: 500;
  margin-bottom: 4px;
}
.contentUrl {
  font-size: 12px;
  font-family: Poppins;
  font-weight: 500;
  line-height: normal;
  letter-spacing: -0.12px;
  color: #939ca3;
  margin-bottom: 12px;
}
.meta-author {
  font-size: 12px;
  font-family: Poppins;
  font-weight: 500;
  letter-spacing: -0.12px;
  color: #8064a2;
}
.meta-actions {
  margin-top: 14px;
  display: flex;
  align-items: center;
  column-gap: 1rem;
}
.meta-votes {
  padding-left: 0;
  padding-right: 0;
}
.metadata-footer {
  background-color: #ebedf0;
  font-size: 12px;
  font-family: Poppins;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  letter-spacing: -0.12px;
  padding: 12px 8px;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  display: block;
}
.postImages {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100% !important;
  width: 100% !important;
  padding: 0 12px;
}

.postImage {
  width: 100%;
  align-self: stretch;
}
.video {
  width: 100%;
}
.actionIcon {
  position: relative;
  margin-left: auto;
  z-index: 1;
}
.optionsContainer {
  position: absolute;
  top: calc(100% - 2px);
  left: 0;
  width: 30px;
  border: 1px solid #cfcfcf;
  border-radius: 8px;
  width: 80px;
  background-color: white;
}
.optionsContainer li {
  list-style: none;
  color: #6d747a;
  padding: 6px;
  font-size: 14px;
  cursor: pointer;
}
@media screen and (max-width: 1100px) {
  .metaImgContainer{
    width: 100%;
    max-height: 200px;
    overflow: hidden;
  }
  .postMetadata{
    display: block;
  }
}

